# apex_csf

./: .bench.yaml  .clang-tidy  .cmake-format.yaml  .dockerignore  .editorconfig  .flake8  .gitignore  .gitleaks.toml  .hadolint.yaml  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ExternalDependencies.cmake  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.ci-cache.yml  docker-compose.ci.yml  docker-compose.yml
apps/: CMakeLists.txt  README.md
apps/apex_action_demo/: CMakeLists.txt  README.md  app_data.toml  release.mk
apps/apex_action_demo/docs/: ACTION_DEMO_DESIGN.md  DEPLOY_PROCEDURE.md  HOW_TO_RUN.md  RESULTS.md
apps/apex_action_demo/exec/: CMakeLists.txt
apps/apex_action_demo/sensor/: CMakeLists.txt  sensor_data.toml
apps/apex_action_demo/tprm/: data_transform.tprm  executive.tprm
apps/apex_circuit_demo/: CMakeLists.txt  README.md
apps/apex_circuit_demo/docs/: HOW_TO_RUN.md
apps/apex_circuit_demo/src/: main.cpp
apps/apex_cpu_sim_demo/: CMakeLists.txt  README.md
apps/apex_cpu_sim_demo/docs/: HOW_TO_RUN.md
apps/apex_cpu_sim_demo/examples/: add.4004  bcd_add.4004  bit_count.4004  carry_chain.4004  fibonacci.4004  flag_ops.4004  increment.4004  indirect.4004  multiply.4004  ram_extended.4004  ram_io.4004  subroutine.4004  twos_complement.4004
apps/apex_cpu_sim_demo/src/: main.cpp
apps/apex_edge_demo/: CMakeLists.txt  README.md  app_data.toml  release.mk
apps/apex_edge_demo/docs/: DEPLOY_PROCEDURE.md  EDGE_DESIGN.md  HOW_TO_RUN.md  RESULTS.md
apps/apex_edge_demo/exec/: CMakeLists.txt
apps/apex_edge_demo/tprm/: README.md  batch_stats.tprm  conv_filter.tprm  fft_analyzer.tprm  master.tprm  master_thor.tprm  scheduler.tprm  system_monitor.tprm
apps/apex_hil_demo/: CMakeLists.txt  app_data.toml  release.mk
apps/apex_hil_demo/c2_data/: HilComparator.json  HilPlantModel.json  HilProtocol.json  SystemComponent.json
apps/apex_hil_demo/docs/: DEPLOY_PROCEDURE.md  FRAMEWORK_COMPARISON.md  HIL_DESIGN.md  HOW_TO_RUN.md  RESULTS.md
apps/apex_hil_demo/driver/: driver_data.toml
apps/apex_hil_demo/exec/: CMakeLists.txt
apps/apex_hil_demo/firmware/: CMakeLists.txt
apps/apex_hil_demo/model/: CMakeLists.txt  plant_data.toml  vfc_data.toml
apps/apex_hil_demo/ops_data/: HilDriver.json
apps/apex_hil_demo/scripts/: checkout.py  demo_customer.py  demo_file_transfer.py  demo_lock_unlock.py  demo_sequencing.py  demo_tprm_reload.py  health.py  test_runtime_updates.py
apps/apex_hil_demo/test/: test_c2_runtime_update.py  test_ops_runtime_update.py
apps/apex_hil_demo/tprm/: action.tprm  driver_real.tprm  master.tprm  master_1khz.tprm  plant_model.tprm  safe_master.tprm  safe_scheduler.tprm
apps/apex_hil_demo/watchdog/: CMakeLists.txt
apps/apex_horizon_demo/lidar_box/: CMakeLists.txt  README.md
apps/apex_mc_demo/: CMakeLists.txt
apps/apex_mc_demo/docs/: HOW_TO_RUN.md  RESULTS.md
apps/apex_mc_demo/scripts/: smoke.sh
apps/apex_mc_demo/src/: main.cpp
apps/apex_ops_demo/: CMakeLists.txt  app_data.toml  release.mk
apps/apex_ops_demo/docs/: DEPLOY_PROCEDURE.md  HOW_TO_RUN.md  RESULTS.md
apps/apex_ops_demo/exec/: CMakeLists.txt
apps/apex_ops_demo/scripts/: checkout.py
apps/apex_ops_demo/tprm/: interface.tprm  master.tprm  scheduler.tprm  wave_gen_0.tprm  wave_gen_1.tprm
apps/apex_ops_demo/wave/: CMakeLists.txt  wave_data.toml
apps/apex_time_demo/: CMakeLists.txt  README.md  release.mk
apps/apex_time_demo/docs/: DEPLOY_PROCEDURE.md  DESIGN.md  HOW_TO_RUN.md  RESULTS.md
apps/apex_time_demo/exec/: CMakeLists.txt
apps/arduino_encryptor_demo/: CMakeLists.txt  README.md  release.mk
apps/arduino_encryptor_demo/docs/: ARDUINO_UNO_R3_PINOUT.md  ENCRYPTOR_DESIGN.md  HOW_TO_RUN.md  MEMORY_MAP.md
apps/arduino_encryptor_demo/inc/: EncryptorCommon.hpp  EncryptorEngine.hpp  KeyStore.hpp  OverheadTracker.hpp
apps/arduino_encryptor_demo/scripts/: serial_checkout.py
apps/arduino_encryptor_demo/src/: CommandDeck.cpp  EncryptorEngine.cpp  KeyStore.cpp  main.cpp
apps/c2000_encryptor_demo/: CMakeLists.txt  README.md
apps/c2000_encryptor_demo/docs/: ENCRYPTOR_DESIGN.md  HOW_TO_RUN.md  LAUNCHXL_F280049C_PINOUT.md  MEMORY_MAP.md
apps/c2000_encryptor_demo/inc/: aes256gcm.h
apps/c2000_encryptor_demo/scripts/: serial_checkout.py
apps/c2000_encryptor_demo/src/: device.c  main.cpp
apps/esp32_encryptor_demo/: CMakeLists.txt  README.md  release.mk  sdkconfig.defaults
apps/esp32_encryptor_demo/docs/: BREADBOARD_SETUP.md  ENCRYPTOR_DESIGN.md  HOW_TO_RUN.md  MEMORY_MAP.md  SH_U09C5_PINOUT.md
apps/esp32_encryptor_demo/inc/: EncryptorCommon.hpp  EncryptorConfig.hpp  KeyStore.hpp  OverheadTracker.hpp
apps/esp32_encryptor_demo/scripts/: serial_checkout.py
apps/esp32_encryptor_demo/src/: CommandDeck.cpp  EncryptorEngine.cpp  main.cpp
apps/pico_encryptor_demo/: CMakeLists.txt  README.md  pico_sdk_import.cmake  release.mk
apps/pico_encryptor_demo/docs/: BREADBOARD_SETUP.md  ENCRYPTOR_DESIGN.md  HOW_TO_RUN.md  MEMORY_MAP.md  RASPBERRY_PI_PICO_PINOUT.md
apps/pico_encryptor_demo/inc/: CommandDeck.hpp  EncryptorCommon.hpp  EncryptorConfig.hpp  EncryptorEngine.hpp  (+2 more)
apps/stm32_encryptor_demo/: CMakeLists.txt  README.md  release.mk
apps/stm32_frames_selftest/: README.md  STM32L476RG.ld
apps/template_app/: CMakeLists.txt  README.md  release.mk
demos/: CMakeLists.txt
demos/apex_action_demo/: CMakeLists.txt  README.md  release.mk
demos/apex_edge_demo/: CMakeLists.txt  README.md  release.mk
demos/apex_hil_demo/: CMakeLists.txt  README.md
demos/apex_horizon_demo/: CMakeLists.txt
demos/apex_mc_demo/: README.md
demos/apex_ops_demo/: CMakeLists.txt  README.md  release.mk
demos/apex_time_demo/: CMakeLists.txt  app_data.toml
demos/c2000_encryptor_demo/: CMakeLists.txt  F280049C.cmd  README.md  release.mk
demos/stm32_frames_selftest/: CMakeLists.txt
src/: CMakeLists.txt
src/sim/: CMakeLists.txt
src/utilities/: CMakeLists.txt
tools/cpp/: CMakeLists.txt  README.md
tools/py/: README.md  pyproject.toml
tools/rust/: .gitignore  Cargo.toml  README.md  build.rs
(+2303 files in other folders)
